style: fix the gap

--- a/assets/frontend/mpwem_style.css
+++ b/assets/frontend/mpwem_style.css
@@ -1542,7 +1542,6 @@ button.mep-cat-control.mixitup-control-active {
   display: block;
   overflow: hidden;
   padding: 10px;
-  margin-top: 20px;
   margin-bottom: 5px;
 }
 
@@ -1551,7 +1550,6 @@ button.mep-cat-control.mixitup-control-active {
   font-weight: 600;
   color: #444444;
   font-size: 16px;
-  border-top: 1px solid #DDD;
 }
 
 .mep-default-sidebar .mep-default-sidebar-speaker-list h3 {
@@ -4373,7 +4371,7 @@ input.mpe-new-input-group-field {
   margin-bottom: 10px;
 }
 .mep-default-sidrbar-events-schedule #mep_event_date_sch {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .mep-default-sidrbar-events-schedule ul.mep_event_date_sch {
   margin-left: 10px;
