--- a/assets/sass/styles/_mpwem_style.scss
+++ b/assets/sass/styles/_mpwem_style.scss
@@ -1332,7 +1332,6 @@ button.mep-cat-control.mixitup-control-active {
 	display: block;
 	overflow: hidden;
 	padding: 10px;
-	margin-top: 20px;
 	margin-bottom: 5px;
 }
 .mep-default-sidebar-speaker-list h3 {
@@ -1340,7 +1339,6 @@ button.mep-cat-control.mixitup-control-active {
 	font-weight: 600;
 	color: #444444;
 	font-size: 16px;
-	border-top: 1px solid #DDD;
 }
 .mep-default-sidebar .mep-default-sidebar-speaker-list h3 {
 	padding: 15px 0;
